<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="6dp"
    android:paddingTop="4dp"
    android:paddingEnd="6dp"
    android:paddingBottom="4dp">

    <TextView
        android:layout_width="22dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/posicao_abrev"
        android:textColor="@color/text_primary"
        android:textSize="11sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/equipa_label"
        android:textColor="@color/text_primary"
        android:textSize="11sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/jogos_abrev"
        android:textColor="@color/text_primary"
        android:textSize="11sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/vitorias_abrev"
        android:textColor="@color/text_primary"
        android:textSize="11sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/empates_abrev"
        android:textColor="@color/text_primary"
        android:textSize="11sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/derrotas_abrev"
        android:textColor="@color/text_primary"
        android:textSize="11sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/golos_marcados_abrev"
        android:textColor="@color/text_primary"
        android:textSize="11sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/golos_sofridos_abrev"
        android:textColor="@color/text_primary"
        android:textSize="11sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/pontos_abrev"
        android:textColor="@color/text_primary"
        android:textSize="11sp" />

</LinearLayout>
